name changed to index

--- a/gearspackage.html
+++ b/gearspackage.html
@@ -86,7 +86,7 @@
                                 <ul class="navbar-nav me-auto" >
                                     <li class="nav-item">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
-                                            href="homepage.html">Gears</a>
+                                            href="index.html">Gears</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;" href="gearspackage.html">Gears
                                             Package</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
