--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <div class="">
+    <div class="" style="position: fixed;">
 
-        <p style="text-align: center; color: gainsboro; margin-bottom: 0px;">Whatsapp/facebbok/Instagram</p>
+        <p style="text-align: center; color: red; margin-bottom: 0px; ">Whatsapp/facebbok/Instagram</p>
 
     </div>
 
@@ -128,13 +128,13 @@
 
      <div class="container mt-5">
         <div class="row">
-            <div class="col-3 " style="background-color: ghostwhite;">
+            <div class="col-3 mt-4 " style="background-color: ghostwhite;">
                 <div class="card m-3"
 
   
                     style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
 
-                    <div class="card-body text-center">
+                    <div class="card-body text-center ">
                         <h5 class="card-title text-center" style="color: cadetblue ;">PRICE FILTER</h5>
                         <hr>
                         <h2></h2><a href="" style="text-decoration: none; color: cadetblue;text-align: center;">High to
