--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <div class="" style="position: fixed;">
+    <div class="" >
 
-        <p style="text-align: center; color: red; margin-bottom: 0px; ">Whatsapp/facebbok/Instagram</p>
+        <p style="text-align: center; color: rgba(0, 0, 0, 0.2); margin-bottom: 0px; ">Whatsapp/facebbok/Instagram</p>
 
     </div>
 
@@ -83,7 +83,7 @@
                         <div style="display: inline-block; margin-left: 5%; ">
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto">
+                                <ul class="navbar-nav me-auto ">
                                     <li class="nav-item">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
                                             href="index.html">Gears</a>
