--- a/gearspackage.html
+++ b/gearspackage.html
@@ -14,7 +14,7 @@
     <title>Demo App</title>
 </head>
 
-<body style="color: rgb(237, 164, 74);">
+<body >
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -87,7 +87,7 @@
                                     <li class="nav-item">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
                                             href="index.html">Gears</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;" href="gearspackage.html">Gears
+                                        <a class="px-4" style="color: bisque; text-decoration: none;  border-radius:20px; border-style: solid; border-width: 2px;" href="gearspackage.html">Gears
                                             Package</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
                                             href="blog.html">Blog</a>
@@ -100,6 +100,12 @@
                                         </a>
 
                                     </li>
+                                    <style>
+                                        a:hover{
+                                            border-radius:20px; border-style: solid; border-width: 2px;
+                                            
+                                        }
+                                    </style>
 
 
 
@@ -169,7 +175,7 @@
                         src="https://images.pexels.com/photos/5204433/pexels-photo-5204433.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">MUSTANG PACKAGE</h5>
+                        <a class="card-title text-center text-decoration-none" href="#">MUSTANG PACKAGE</a>
                         <p class="card-text"></p>
 
                     </div>
@@ -181,7 +187,7 @@
                         src="https://images.pexels.com/photos/6038206/pexels-photo-6038206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">EVEREST PACKAGE</h5>
+                        <a class="card-title text-decoration-none text-center" href="#">EVEREST PACKAGE</a>
                         <p class="card-text"></p>
 
                     </div>
@@ -193,7 +199,7 @@
                         src="https://images.pexels.com/photos/4411191/pexels-photo-4411191.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">POKHARA PACKAGE</h5>
+                        <a class="card-title text-center text-decoration-none" href="#">POKHARA PACKAGE</a>
                         <p class="card-text"></p>
 
                     </div>
@@ -232,7 +238,7 @@
                                 <img src="https://images.pexels.com/photos/167706/pexels-photo-167706.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -243,7 +249,7 @@
                                 <img src="https://images.pexels.com/photos/1904769/pexels-photo-1904769.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -254,7 +260,7 @@
                                 <img src="https://images.pexels.com/photos/755871/pexels-photo-755871.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -265,7 +271,7 @@
                                 <img src="https://images.pexels.com/photos/167706/pexels-photo-167706.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -290,7 +296,7 @@
                                 <img src="https://images.pexels.com/photos/7242760/pexels-photo-7242760.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -301,7 +307,7 @@
                                 <img src="https://images.pexels.com/photos/7242745/pexels-photo-7242745.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -312,7 +318,7 @@
                                 <img src="https://images.pexels.com/photos/7129168/pexels-photo-7129168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -323,7 +329,7 @@
                                 <img src="https://images.pexels.com/photos/7129168/pexels-photo-7129168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -348,7 +354,7 @@
                                 <img src="https://images.pexels.com/photos/4992707/pexels-photo-4992707.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -359,7 +365,7 @@
                                 <img src="https://images.pexels.com/photos/1178525/pexels-photo-1178525.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -370,7 +376,7 @@
                                 <img src="https://images.pexels.com/photos/793114/pexels-photo-793114.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -381,7 +387,7 @@
                                 <img src="https://images.pexels.com/photos/4558420/pexels-photo-4558420.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                                     class="" style="height: 200px; object-fit: cover;" alt="...">
                                 <div class="card-body" style="display: inline-flex;">
-                                    <h5 class="card-title ">branded hiking shoes</h5>
+                                    <h5 class="card-title ">Branded hiking shoes</h5>
                                     <div class="btn bg-light mx-2 pt-3 bg-primary text-success">PICK</div>
 
                                 </div>
@@ -487,7 +493,10 @@
 
 
 
-
+    
+    <div style=" background-color: rgba(0, 0, 0, 0.19);  width: 100%; height: 30px; bottom: 0px;">
+        <p style="text-align: center; color: black; ">@2022 copyright</p>
+    </div>
 
 
 
