--- a/blog.html
+++ b/blog.html
@@ -80,16 +80,16 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div style="display: inline-block;">
+                        <div style="display: inline-block;  margin-left: 5%;">
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto">
                                     <li class="nav-item">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
                                             href="index.html">Gears</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;" href="gearspackage.html">Gears
+                                        <a class="px-4" style="color: bisque; text-decoration: none;  " href="gearspackage.html">Gears
                                             Package</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;"
+                                        <a class="px-4" style="color: bisque; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
                                             href="blog.html">Blog</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;" href="book.html">Book
                                             my Trip</a>
@@ -100,6 +100,12 @@
                                         </a>
 
                                     </li>
+                                    <style>
+                                        a:hover{
+                                            border-radius:20px; border-style: solid; border-width: 2px;
+                                            
+                                        }
+                                    </style>
 
 
 
@@ -125,7 +131,7 @@
 
     </div>
     </div>
-    <div class="container">
+    <div class="container mx-5">
         <div class="row ">
             <div class="col-9 " style=" height:100%; color: cadetblue; background-color: antiquewhite;">
 
@@ -283,7 +289,10 @@
         </div>
     </div>
 
-
+    
+    <div style=" background-color: rgba(0, 0, 0, 0.19);  width: 100%; height: 30px; bottom: 0px;">
+        <p style="text-align: center; color: black; ">@2022 copyright</p>
+    </div>
 
 </body>
 
