--- a/book.html
+++ b/book.html
@@ -92,7 +92,8 @@
                                             Package</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
                                             href="blog.html">Blog</a>
-                                        <a class="px-4" style="color: beige; text-decoration: none;"
+                                        <a class="px-4"
+                                            style="color: beige; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
                                             href="book.html">Book
                                             my Trip</a>
 
@@ -102,6 +103,14 @@
                                         </a>
 
                                     </li>
+                                    <style>
+                                        a:hover {
+                                            border-radius: 20px;
+                                            border-style: solid;
+                                            border-width: 2px;
+
+                                        }
+                                    </style>
 
 
 
@@ -114,12 +123,12 @@
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
+            style="height: 55%;" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions "
+            style="height: 55%;" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
@@ -195,6 +204,9 @@
 
 
 
+    <div style=" background-color: rgba(0, 0, 0, 0.19);  width: 100%; height: 30px; bottom: 0px;">
+        <p style="text-align: center; color: black; ">@2022 copyright</p>
+    </div>
 </body>
 
 </html>
