--- a/book.html
+++ b/book.html
@@ -94,12 +94,12 @@
                                             href="blog.html">Blog</a>
                                         <a class="px-4"
                                             style="color: beige; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
-                                            href="book.html">Book
-                                            my Trip</a>
+                                            href="book.html">Trip Booking
+                                            </a>
 
                                         <a class="px-4" style="color:bisque; text-decoration: none;" href="#">About
                                             us</a>
-                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact us
+                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact_us
                                         </a>
 
                                     </li>
