--- a/blog.html
+++ b/blog.html
@@ -91,12 +91,12 @@
                                             Package</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
                                             href="blog.html">Blog</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;" href="book.html">Book
-                                            my Trip</a>
+                                        <a class="px-4" style="color: bisque; text-decoration: none;" href="book.html">Trip Booking
+                                            </a>
 
                                         <a class="px-4" style="color:bisque; text-decoration: none;" href="#">About
                                             us</a>
-                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact us
+                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact_us
                                         </a>
 
                                     </li>
