--- a/gearspackage.html
+++ b/gearspackage.html
@@ -28,7 +28,7 @@
     </div>
 
 
-    <div style="height: 300px;">
+    <div style="height: 18.75rem;">
 
         <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
 
@@ -137,9 +137,9 @@
     </div>
 
 
-    <div class="mt-5">
-        <div class="row">
-            <div class="col-3 " style="background-color: ghostwhite;">
+    <div class="mt-5 ">
+        <div class="row" >
+            <div class="col" style=" min-width: 15rem; display: grid; justify-content: center;">
                 <div class="card m-3" style="width: 18rem; color: darkgray;  ">
 
                     <div class="card-body text-center">
@@ -212,7 +212,7 @@
 
 
             </div>
-            <div class="col-9" style="background-color: floralwhite; ">
+            <div class="row" style="background-color: floralwhite; max-width: 62rem ; ">
                 <p class="text-center text-danger pt-3">NOTE: PICK ONE ONE ITEMS.</p>
                 <p class="text-center text-danger pt-3">NOTE: PICK ITEMS AND PROCEED.</p>
                 <h1 style="text-align: center; color: cadetblue;">ANNAPURNA PACKAGE</h1>
@@ -221,15 +221,15 @@
                 <div>
 
 
-                    <div class="px-5" style="text-align: center; display: flex; color: slategrey; ">
+                    <div class="" style="text-align: center; display: flex; color: slategrey; justify-content: space-evenly; ">
 
-                        <h3>Nrp per package : 8000</h3>
+                        <p>NRP per package : 8000</p>
 
-                        <p class="card-text px-4"> Quantity 3 <br> discount NRP 2500</p>
-                        <p class="card-text px-4"> Quantity 5 <br> discount NRP 5000</p>
-                        <p class="card-text px-4"> Quantity 10 <br> discount NRP 12000</p>
+                        <p class=""> Quantity 3 <br> discount NRP 2500</p>
+                        <p class=""> Quantity 5 <br> discount NRP 5000</p>
+                        <p class=""> Quantity 10 <br> discount NRP 12000</p>
                         <!-- <a href="#" class="btn btn-primary px-4" style="text-align: center;">Add to cart</a> -->
-                        <p class="card-text px-4"> 100% gift hamper </p>
+                        <p class=""> 100% gift hamper </p>
                     </div>
                     <h3 style="text-align: center; color: cadetblue;">SHOES ITEMS</h3>
 
@@ -424,14 +424,14 @@
         <div>
             <h1 style="text-align: center; color: cadetblue;">Annapurna PACKAGE</h1>
 
-            <div class="px-5" style="text-align: center; display: flex; color: slategrey; ">
+            <div class="" style="text-align: center; display: flex; color: slategrey; justify-content: space-evenly; ">
                 <h3>Nrp per package : 15000</h3>
 
-                <p class="card-text px-4"> Quantity 3 <br> discount NRP 3000</p>
-                <p class="card-text px-4"> Quantity 5 <br> discount NRP 7000</p>
-                <p class="card-text px-4"> Quantity 10 <br> discount NRP 15000</p>
+                <p class=""> Quantity 3 <br> discount NRP 3000</p>
+                <p class=""> Quantity 5 <br> discount NRP 7000</p>
+                <p class=""> Quantity 10 <br> discount NRP 15000</p>
 
-                <p class="card-text px-4"> 100% gift hamper </p>
+                <p class=""> 100% gift hamper </p>
             </div>
 
             <ul
