--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Demo App</title>
 </head>
 
-<body class="">
+<body class="" >
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -133,11 +133,9 @@
         </button>
     </div>
 
-    <div class="row" >
+    <div class="row" style="display: flex; justify-content: center; " >
 
-
-
-        <div class="col  " style="  max-width: 400px;" >
+        <div class="col  " style="  max-width: 300px;" >
 
 
             <div class="col card m-3"
