--- a/blog.html
+++ b/blog.html
@@ -16,129 +16,138 @@
 
 <body style="color: rgb(237, 164, 74);">
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <div class="" style="position: initial;">
-
-        <p style="text-align: center; color: gainsboro; margin-bottom: 0px;">Whatsapp/facebbok/Instagram</p>
-
-    </div>
+    <div class="m-0 p-0">
 
 
-    <div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+        <div class="" style="position: initial;">
 
-        <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
+            <p style="text-align: center; color: gainsboro; margin-bottom: 0px;">Whatsapp/facebbok/Instagram</p>
 
-
-            <div class="carousel-indicators">
-
-
-
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-
-            <div class="carousel-inner">
-                <div class="carousel-item active" style="align-items: center;">
-                    <img src="https://images.pexels.com/photos/1134188/pexels-photo-1134188.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                        class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item" style="align-items: center;">
-                    <img src="https://images.pexels.com/photos/5480713/pexels-photo-5480713.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                        class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="https://images.pexels.com/photos/5204060/pexels-photo-5204060.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
-                        class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-
-                <nav class="navbar navbar-expand-lg navbar-light appbarcolor  ">
-                    <div class="container-fluid">
-
-
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div style="display: inline-block;  margin-left: 5%;">
-
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto">
-                                    <li class="nav-item">
-                                        <a class="px-4" style="color: bisque; text-decoration: none; "
-                                            href="index.html">Gears</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;  " href="gearspackage.html">Gears
-                                            Package</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
-                                            href="blog.html">Blog</a>
-                                        <a class="px-4" style="color: bisque; text-decoration: none;" href="book.html">Trip Booking
-                                            </a>
-
-                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">About
-                                            us</a>
-                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact_us
-                                        </a>
-
-                                    </li>
-                                    <style>
-                                        a:hover{
-                                            border-radius:20px; border-style: solid; border-width: 2px;
-                                            
-                                        }
-                                    </style>
-
-
-
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </nav>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
+
+        <div>
+
+            <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
+
+
+                <div class="carousel-indicators">
+
+
+
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active" style="align-items: center;">
+                        <img src="https://images.pexels.com/photos/1134188/pexels-photo-1134188.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                            class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" style="align-items: center;">
+                        <img src="https://images.pexels.com/photos/5480713/pexels-photo-5480713.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                            class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.pexels.com/photos/5204060/pexels-photo-5204060.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
+                            class="d-block w-100" alt="..." style=" object-fit: cover; width: 100% ; height: 400px;">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+
+                    <nav class="navbar navbar-expand-lg navbar-light appbarcolor  ">
+                        <div class="container-fluid">
+
+
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div style="display: inline-block;  margin-left: 5%;">
+
+                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                    <ul class="navbar-nav me-auto">
+                                        <li class="nav-item">
+                                            <a class="px-4" style="color: bisque; text-decoration: none; "
+                                                href="index.html">Gears</a>
+                                            <a class="px-4" style="color: bisque; text-decoration: none;  "
+                                                href="gearspackage.html">Gears
+                                                Package</a>
+                                            <a class="px-4"
+                                                style="color: bisque; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
+                                                href="blog.html">Blog</a>
+                                            <a class="px-4" style="color: bisque; text-decoration: none;"
+                                                href="book.html">Trip Booking
+                                            </a>
+
+                                            <a class="px-4" style="color:bisque; text-decoration: none;" href="#">About
+                                                us</a>
+                                            <a class="px-4" style="color:bisque; text-decoration: none;"
+                                                href="#">Contact_us
+                                            </a>
+
+                                        </li>
+                                        <style>
+                                            a:hover {
+                                                border-radius: 20px;
+                                                border-style: solid;
+                                                border-width: 2px;
+
+                                            }
+                                        </style>
+
+
+
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </nav>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </div>
     </div>
-    </div>
-    <div class="container mx-5">
+    <div class="mx-4 " >
         <div class="row ">
-            <div class="col-9 " style=" height:100%; color: cadetblue; background-color: antiquewhite;">
+            <div class="col" style=" min-width: 70%; display: grid; justify-content: center; color: cadetblue; background-color: antiquewhite;">
 
                 <div
                     style="background-color: floralwhite; object-fit: cover; height: 115px;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 0px 0 rgba(0, 0, 0, 0.19); ">
 
-                    <div class="container" style="padding-top: 50px; justify-content: space-evenly; text-align: center;">
+                    <div class=""
+                        style="padding-top: 50px; justify-content: space-evenly; text-align: center;">
                         <div class="row ">
                             <div class="col"><a href=""
                                     style="text-decoration: none;text-align: center; color: grey;">DETAILS</a></div>
@@ -157,7 +166,7 @@
                 </div>
                 <h1 style="text-align: center;">Annapurna</h1>
 
-                <p class="mx-5" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                <p class="mx-1" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Integer ultrices, magna in elementum
                     tristique, tortor justo consectetur velit, vitae vehicula enim arcu et nibh. Donec id felis aliquam,
                     malesuada
@@ -228,7 +237,7 @@
 
 
             </div>
-            <div class="col-3" style=" height:100%; background-color: cornsilk; ">
+            <div class="col" style="  display: flex;flex-direction: column; top: 0px; align-items: center; justify-content: center;">
 
                 <div class="card m-3"
                     style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
@@ -289,11 +298,11 @@
         </div>
     </div>
 
-    
+
     <div style=" background-color: rgba(0, 0, 0, 0.19);  width: 100%; height: 30px; bottom: 0px;">
         <p style="text-align: center; color: black; ">@2022 copyright</p>
     </div>
-
+    </div>
 </body>
 
 </html>
