--- a/gearspackage.html
+++ b/gearspackage.html
@@ -138,7 +138,7 @@
 
 
     <div class="mt-5 ">
-        <div class="row" >
+        <div class="row container-xxl" >
             <div class="col" style=" min-width: 15rem; display: grid; justify-content: center;">
                 <div class="card m-3" style="width: 18rem; color: darkgray;  ">
 
