--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Demo App</title>
 </head>
 
-
+<body style="width: 100%;" class=" flex-lg-shrink-0 ">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -132,7 +132,7 @@
         </button>
     </div>
 
-    <div class="row" style="display: flex; justify-content: center; " >
+    <div class="row container-xxl " style="display: flex; justify-content: center; " >
 
         <div class="col  " style="  max-width: 300px;" >
 
@@ -207,7 +207,9 @@
 
         </div>
 
-        <div class="row" style=" max-width: 990px; height: auto; object-fit: contain;">
+
+
+        <div class="row" style=" max-width: 990px; height: auto;">
 
             <div>
 
