--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,8 @@
     <title>Demo App</title>
 </head>
 
+
+
 <body style="color: rgb(237, 164, 74);">
 
     <div class="m-0 p-0">
@@ -85,15 +87,15 @@
                             <div style="display: inline-block;  margin-left: 5%;">
 
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto">
-                                        <li class="nav-item">
-                                            <a class="px-4" style="color: bisque; text-decoration: none; "
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item row " style="width: 12.5rem;">
+                                            <a class="px-4" style="color: bisque; text-decoration: none;  "
                                                 href="index.html">Gears</a>
                                             <a class="px-4" style="color: bisque; text-decoration: none;  "
                                                 href="gearspackage.html">Gears
                                                 Package</a>
                                             <a class="px-4"
-                                                style="color: bisque; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
+                                                style="color: bisque; text-align: center; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
                                                 href="blog.html">Blog</a>
                                             <a class="px-4" style="color: bisque; text-decoration: none;"
                                                 href="book.html">Trip Booking
