--- a/book.html
+++ b/book.html
@@ -83,8 +83,8 @@
                         <div style="display: inline-block; margin-left: 5%; ">
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto">
-                                    <li class="nav-item">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item row" style="width: 12.5rem;">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
                                             href="index.html">Gears</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
@@ -93,7 +93,7 @@
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
                                             href="blog.html">Blog</a>
                                         <a class="px-4"
-                                            style="color: beige; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px;"
+                                            style="color: beige; text-decoration: none; border-radius:20px; border-style: solid; border-width: 2px; text-align: center;"
                                             href="book.html">Trip Booking
                                             </a>
 
