--- a/gearspackage.html
+++ b/gearspackage.html
@@ -80,15 +80,15 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div style="display: inline-block; margin-left: 5%;">
+                        <div style="display: inline-block; margin-left: 2rem;">
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto">
-                                    <li class="nav-item">
+                                <ul class="navbar-nav ">
+                                    <li class="nav-item row" style="width: 12.5rem;">
                                         <a class="px-4" style="color: bisque; text-decoration: none; "
                                             href="index.html">Gears</a>
                                         <a class="px-4"
-                                            style="color: bisque; text-decoration: none;  border-radius:20px; border-style: solid; border-width: 2px;"
+                                            style="color: bisque; text-decoration: none;  border-radius:20px; border-style: solid; border-width: 2px; text-align: center;"
                                             href="gearspackage.html">Gears
                                             Package</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
@@ -138,7 +138,7 @@
 
 
     <div class="mt-5 ">
-        <div class="row container-xxl" >
+        <div class="row container-sm">
             <div class="col" style=" min-width: 15rem; display: grid; justify-content: center;">
                 <div class="card m-3" style="width: 18rem; color: darkgray;  ">
 
