--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav  ">
-                                    <li class="nav-item">
+                                    <li class="nav-item row" style="width: 12.5rem;">
                                         <a class="px-4 active "
-                                            style=" color: bisque; text-decoration: none;border-radius:20px; border-style: solid; border-width: 2px;"
+                                            style=" color: bisque; text-decoration: none;    text-align: center;border-radius:20px; border-style: solid; border-width: 2px;"
                                             href="index.html">Gears</a>
                                         <a class="px-4" style="color: bisque; text-decoration: none;"
                                             href="gearspackage.html">Gears
