--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
             <div class="col card m-3"
-                style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
+                style=" object-fit: contain; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
 
                 <div class="card-body text-center ">
                     <h5 class="card-title text-center" style="color: cadetblue ;">PRICE FILTER</h5>
@@ -170,7 +170,7 @@
             </div>
 
             <div class=" col card m-3"
-                style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
+                style=" color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); ">
                 <img style="height:12.5rem; object-fit: cover;"
                     src="https://images.pexels.com/photos/5204433/pexels-photo-5204433.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     class="card-img-top" alt="...">
@@ -182,7 +182,7 @@
             </div>
 
             <div class=" col card m-3"
-                style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                style=" color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                 <img style="height: 12.5rem;; object-fit: cover;"
                     src="https://images.pexels.com/photos/6038206/pexels-photo-6038206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     class="card-img-top" alt="...">
@@ -194,7 +194,7 @@
             </div>
 
             <div class="col card m-3"
-                style="width: 18rem; color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                style=" color: darkgray; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                 <img style="height:12.5rem; object-fit: cover;"
                     src="https://images.pexels.com/photos/4411191/pexels-photo-4411191.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     class="card-img-top" alt="...">
