--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                                         <a class="px-4" style="color: beige; text-decoration: none;"
                                             href="book.html">Trip Booking</a>
 
-                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="#">About
-                                            us</a>
+                                        <a class="px-4" style="color:bisque; text-decoration: none;" href="gridbar.html">Gridbar</a>
                                         <a class="px-4" style="color:bisque; text-decoration: none;" href="#">Contact_us
                                         </a>
 
@@ -132,9 +131,9 @@
         </button>
     </div>
 
-    <div class="row container-xxl " style="display: flex; justify-content: center; " >
+    <div class="row container-xxl " style=" justify-content: center; " >
 
-        <div class="col  " style="  max-width: 300px;" >
+        <div class="col shown " style="  max-width: 100%;" >
 
 
             <div class="col card m-3"
